<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:layout_gravity="fill_horizontal" 
    android:orientation="vertical">
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/title"
	    android:id="@+id/Label"
	    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/Username"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="Please enter your username" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    	</EditText>
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
		<EditText
			android:layout_height="wrap_content"
			android:id="@+id/Password"
			android:selectAllOnFocus="true"
			android:lines="1"
			android:hint="Please enter your password" 
			android:inputType="textPassword" 
			android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
		</EditText>
	</LinearLayout>
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
        <CheckBox 
        	android:text="Remember me" 
        	android:id="@+id/RememberMe" 
        	android:layout_height="wrap_content" 
        	android:layout_gravity="center_horizontal" 
        	android:layout_width="wrap_content">
        </CheckBox>
	</LinearLayout>
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
		<Button 
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Login"
			android:id="@+id/Login"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Clear"
			android:id="@+id/Clear"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Register"
			android:id="@+id/Register"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Exit"
			android:id="@+id/Exit"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
		</Button>
    </LinearLayout>
</LinearLayout>
