<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" 
    android:layout_gravity="fill_horizontal" 
    android:orientation="vertical">
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/registration"
	    android:id="@+id/Label"
	    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<EditText
	    	android:layout_height="wrap_content"
	    	android:id="@+id/nUsername"
	    	android:selectAllOnFocus="true"
	    	android:lines="1"
	    	android:hint="Enter your User Name" 
	    	android:inputType="text" 
	    	android:layout_width="fill_parent" 
	    	android:layout_gravity="fill_horizontal" 
	    	android:gravity="fill_horizontal">
	    </EditText>
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<EditText
			android:layout_height="wrap_content"
			android:gravity="left"
			android:selectAllOnFocus="true"
			android:lines="1"
			android:id="@+id/nPassword"
			android:hint="Please enter a password" 
			android:inputType="textPassword" 
			android:layout_gravity="fill_horizontal" 
			android:layout_width="match_parent">
		</EditText>
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<EditText
			android:layout_height="wrap_content"
			android:gravity="left"
			android:selectAllOnFocus="true"
			android:lines="1"
			android:id="@+id/nConfiPass"
			android:hint="Please confirm your new password" 
			android:inputType="textPassword" 
			android:layout_gravity="fill_horizontal" 
			android:layout_width="match_parent">
		</EditText>
	</LinearLayout>
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Register"
			android:id="@+id/nRegister"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
			</Button>
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Clear"
			android:id="@+id/nClear"
			android:clickable="true" 
			android:layout_width="fill_parent" 
			android:layout_weight="1">
			</Button>
	</LinearLayout>
	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent">
		<Button
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/Back"
			android:id="@+id/nBack"
			android:clickable="true" android:layout_width="fill_parent" android:layout_weight="1"></Button>
	</LinearLayout>
</LinearLayout>
